# webserv

./: CGI.cpp  CGI.hpp  CMakeLists.txt  Client.cpp  Client.hpp  CommonGatewayInterface.cpp  CommonGatewayInterface.hpp  Makefile  README.md  TCPServer.cpp  TCPServer.hpp  WebServer.cpp  WebServer.hpp  client  clientTest.cpp  main.cpp  server  test.cpp  testCGI.cpp
configs/: default.conf  default2.conf  myconf.conf
html/: AutoIndex.html
html/autoIndexPage/: AutoIndex.html
includes/: CGI.hpp  ChunkedRequest.hpp  Client.hpp  Colors.hpp  Defines.hpp  HttpRequest.hpp  HttpResponse.hpp  Location.hpp  Parser.hpp  Server.hpp  WebServer.hpp
resources/: error.html  index.html  someError.html
resources/main_page/: index.html  index1.html
secret/: whiteList
srcs/: AutoIndexGenerate.cpp  CGI.cpp  ChunkedRequest.cpp  Client.cpp  HttpRequest.cpp  HttpResponse.cpp  Location.cpp  Parser.cpp  Server.cpp  WebServer.cpp  base64.cpp  main.cpp
test_scripts/: chunk.py  manyClient.py  sessionTest.py
test_scripts/pythonScripts/: chunk.py  get.py  manyClient.py  manyClient.sh  post.py  put.py  sessionTest.py  test.py
test_scripts/testCpp/: test.html  testOpenDir.cpp
tmp/testfiles/: test.cpp
